# tasker-contrib

./: .gitignore  .mcp.json  .tasker-cli.toml  .tasker-ctl.toml  CLAUDE.md  DEVELOPMENT.md  LICENSE  Makefile.toml  README.md  pyproject.toml
.github/: CI-ARCHITECTURE.md  markdown-link-check.json  upstream-versions.json
.github/workflows/: CLAUDE.md  bleeding-edge.yml  ci.yml  test-examples.yml  upstream-check.yml
docs/: README.md
examples/: CLAUDE.md  README.md  docker-compose.yml  init-db.sql
examples/fastapi-app/: .env  .env.template  CLAUDE.md  README.md  alembic.ini  pyproject.toml
examples/fastapi-app/alembic/: env.py
examples/fastapi-app/alembic/versions/: 001_create_domain_models.py
examples/fastapi-app/app/: CLAUDE.md  __init__.py  database.py  main.py  models.py  schemas.py
examples/fastapi-app/app/config/: CLAUDE.md  worker.toml
examples/fastapi-app/app/config/templates/: analytics_pipeline.yaml  customer_success_process_refund.viz.md  customer_success_process_refund.yaml  data_pipeline_analytics_pipeline.viz.md  data_pipeline_analytics_pipeline.yaml  ecommerce_order_processing.viz.md  ecommerce_order_processing.yaml  microservices_user_registration.viz.md  microservices_user_registration.yaml  payments_process_refund.viz.md  payments_process_refund.yaml  user_registration.yaml
examples/fastapi-app/app/handlers/: CLAUDE.md  __init__.py  customer_success.py  data_pipeline.py  ecommerce.py  microservices.py  payments.py
examples/fastapi-app/app/routes/: CLAUDE.md  __init__.py  analytics.py  compliance.py  orders.py  services.py
examples/fastapi-app/app/services/: __init__.py  customer_success.py  data_pipeline.py  ecommerce.py  microservices.py  payments.py  types.py
examples/fastapi-app/tests/: CLAUDE.md  __init__.py  conftest.py  helpers.py  test_schema_consistency.py  test_workflows.py
examples/fastapi-app/tools/: schema_check.py
ops/: README.md
python/: README.md
rails/: README.md
rust/: README.md
scripts/: build-tasker-ctl.sh  ci-sanity-check.sh  cleanup-keep-files.sh  lint-templates.sh  setup-structure.sh  test-templates.sh  validate-plugins.sh
typescript/: README.md
(+334 files in other folders)
